force-app/main/default/objects/WorkOrder/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>