force-app/main/default/objects/WorkOrder/fields/Arrived_Onsite_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Arrived_Onsite_Timestamp__c</fullName>
    <label>Arrived Onsite Timestamp</label>
    <type>DateTime</type>
</CustomField>