force-app/main/default/objects/WorkOrder/fields/Caller_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_Name__c</fullName>
    <description>This field is used to populate the Sales Order Customer Reference when the Customer PO is not provided</description>
    <formula>Contact.FirstName + &#39; &#39;+  Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caller Name</label>
    <type>Text</type>
</CustomField>