force-app/main/default/objects/WorkOrder/fields/Current_PrePurchase_Hours_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_PrePurchase_Hours_Balance__c</fullName>
    <formula>ServiceContract.Number_of_Pre_Purchased_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current PrePurchase Hours Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>