force-app/main/default/objects/WorkOrder/fields/Customer_Purchase_Order_number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Purchase_Order_number__c</fullName>
    <label>Customer Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>