force-app/main/default/objects/WorkOrder/fields/Dispatch_Response__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Response__c</fullName>
    <formula>IF( Notify_NOC_Admin__c = true,
IMAGE(&quot;https://gotosage--c.documentforce.com/servlet/servlet.ImageServer?id=0153i000000MXd0&amp;oid=00D3i000000EBMG&amp;lastMod=1571370471000&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispatch Response?</label>
    <type>Text</type>
</CustomField>