force-app/main/default/objects/WorkOrder/fields/Filter_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Filter_End_Date__c</fullName>
    <label>Filter End Date</label>
    <type>Date</type>
</CustomField>