force-app/main/default/objects/WorkOrder/fields/Filter_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Filter_Start_Date__c</fullName>
    <label>Filter Start Date</label>
    <type>Date</type>
</CustomField>