force-app/main/default/objects/WorkOrder/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <description>This field is used to calculate GST from WOLI. This field is to be used in a process builder and Service Report</description>
    <label>GST</label>
    <summarizedField>WorkOrderLineItem.GST__c</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>