force-app/main/default/objects/WorkOrder/fields/In_Progress_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Timestamp__c</fullName>
    <label>In Progress Timestamp</label>
    <type>DateTime</type>
</CustomField>