force-app/main/default/objects/WorkOrder/fields/Initial_Findings__c.field-meta.xml
<CustomField>
    <fullName>Initial_Findings__c</fullName>
    <label>Initial Findings</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>