force-app/main/default/objects/WorkOrder/fields/Materials_Total__c.field-meta.xml
<CustomField>
    <fullName>Materials_Total__c</fullName>
    <label>Materials Total</label>
    <summarizedField>WorkOrderLineItem.TECH_Total_ex_GST__c</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.StartDate</field>
        <operation>equals</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>