force-app/main/default/objects/WorkOrder/fields/Notify_NOC_Admin__c.field-meta.xml
<CustomField>
    <fullName>Notify_NOC_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is populated from an entitlement process in order to trigger a process builder that create a Chatter notification to the NOC Admin group</description>
    <label>Notify NOC Admin</label>
    <type>Checkbox</type>
</CustomField>