force-app/main/default/objects/WorkOrder/fields/Number_of_Pre_Purchased_Hours__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pre_Purchased_Hours__c</fullName>
    <formula>ServiceContract.Number_of_Pre_Purchased_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Pre-Purchased Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>