force-app/main/default/objects/WorkOrder/fields/Priority_Image__c.field-meta.xml
<CustomField>
    <fullName>Priority_Image__c</fullName>
    <description>Field used in List views for visual representation of Priority value</description>
    <formula>IF( TEXT(Priority) = &#39;4&#39; || TEXT(Priority) = &#39;5&#39;, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;),
IF ( TEXT(Priority) = &#39;3&#39;, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>