force-app/main/default/objects/WorkOrder/fields/SA_Number__c.field-meta.xml
<CustomField>
    <fullName>SA_Number__c</fullName>
    <description>Field used for dispatch milestone email action</description>
    <label>SA Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>