force-app/main/default/objects/WorkOrder/fields/Service_Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Report_Status__c</fullName>
    <label>Service Report Status</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>