force-app/main/default/objects/WorkOrder/fields/Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>