force-app/main/default/objects/WorkOrder/fields/Site_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact_First_Name__c</fullName>
    <description>This field is used for Email template</description>
    <formula>Site_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Contact First Name</label>
    <type>Text</type>
</CustomField>