force-app/main/default/objects/WorkOrder/fields/Suggested_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Follow_up__c</fullName>
    <label>Suggested Follow-up</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>