force-app/main/default/objects/WorkOrder/fields/Total_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Hours__c</fullName>
    <label>Total Billable Hours</label>
    <summarizedField>WorkOrderLineItem.Billable_Hours__c</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>