force-app/main/default/objects/WorkOrder/fields/Total_Consumed_Pre_Purchased_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Consumed_Pre_Purchased_Hours__c</fullName>
    <label>Total Consumed Pre Purchased Hours</label>
    <summarizedField>WorkOrderLineItem.Consumed_Pre_Purchased_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Consumed_Pre_Purchased_Hours__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>