force-app/main/default/objects/WorkOrder/fields/Use_Pre_purchased_Hours__c.field-meta.xml
<CustomField>
    <fullName>Use_Pre_purchased_Hours__c</fullName>
    <label>Use Pre purchased Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>