force-app/main/default/objects/WorkOrder/fields/Will_Salesforce_pull_this__c.field-meta.xml
<CustomField>
    <fullName>Will_Salesforce_pull_this__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will Salesforce pull this?</label>
    <type>Checkbox</type>
</CustomField>