force-app/main/default/objects/WorkOrder/fields/X7_days_reminder_sent__c.field-meta.xml
<CustomField>
    <fullName>X7_days_reminder_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>7 days reminder sent?</label>
    <type>Checkbox</type>
</CustomField>