force-app/main/default/objects/WorkOrder/validationRules/VR_WOR01_ReadyToInvoiceForPurchaseHours.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_WOR01_ReadyToInvoiceForPurchaseHours</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Use_Pre_purchased_Hours__c , &#39;Yes&#39;) &amp;&amp; (ISPICKVAL(Status, &#39;Awaiting Customer PO&#39;) || ISPICKVAL(Status, &#39;Ready To Invoice&#39;)) &amp;&amp;  Materials_Total__c =0</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Status cannot be updated to &#39;Awaiting Customer PO&#39; and &#39;Ready To Invoice&#39; when Pre purchased hours are used  and there is no material to invoice.</errorMessage>
</ValidationRule>