force-app/main/default/objects/WorkOrder/validationRules/VR_WOR02_CannotUseBlockHours.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_WOR02_CannotUseBlockHours</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Use_Pre_purchased_Hours__c) &amp;&amp;
ISPICKVAL( Use_Pre_purchased_Hours__c , &#39;Yes&#39;) &amp;&amp;  Current_PrePurchase_Hours_Balance__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Use_Pre_purchased_Hours__c</errorDisplayField>
    <errorMessage>The value cannot be Yes when the balance of Pre purchased hours is not positive.</errorMessage>
</ValidationRule>