force-app/main/default/objects/WorkOrder/validationRules/VR_WOR03_CloseWorkOrder.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_WOR03_CloseWorkOrder</fullName>
    <active>true</active>
    <description>Can not close work order if Sales Order is not integrated or work order is completed with pre purchased hours</description>
    <errorConditionFormula>AND( NOT( $User.FirstName = &apos;Integration&apos;),AND ( AND ( NOT( AND(
ISPICKVAL (PRIORVALUE(Status), &apos;Ready To Invoice&apos;),  TEXT(Sales_Order__r.Integration_Status__c) == &apos;Successful&apos;)), TEXT(Status) == &apos;Closed&apos;), AND (NOT(AND(ISPICKVAL (PRIORVALUE(Status), &apos;Completed&apos;),TEXT(Use_Pre_purchased_Hours__c) == &apos;Yes&apos;)),TEXT(Status) == &apos;Closed&apos;)))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Can not mark Work Order as Closed if Sales Order is not integrated or Work Order is Completed with pre-purchased hours</errorMessage>
</ValidationRule>