force-app/main/default/objects/WorkOrder/listViews/DPTI_WorkOrders.listView-meta.xml
<ListView>
    <fullName>DPTI_WorkOrders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account</field>
        <operation>contains</operation>
        <value>DPTI</value>
    </filters>
    <label>DPTI - WorkOrders</label>
    <sharedTo>
        <group>NOC_Admin</group>
    </sharedTo>
</ListView>