force-app/main/default/objects/WorkOrder/listViews/NOC_WO_Queue_LV.listView-meta.xml
<ListView>
    <fullName>NOC_WO_Queue_LV</fullName>
    <columns>Name</columns>
    <columns>CreatedDate</columns>
    <columns>Account</columns>
    <columns>ServiceContract</columns>
    <columns>Priority_Image__c</columns>
    <columns>ServiceTerritory</columns>
    <columns>Status</columns>
    <columns>Dispatch_Response__c</columns>
    <columns>WorkType</columns>
    <filterScope>Queue</filterScope>
    <label>NOC WO Queue</label>
    <queue>NOC_Technician_Queue</queue>
</ListView>