force-app/main/default/objects/WorkOrder/listViews/Ready_to_Invoice_LV.listView-meta.xml
<ListView>
    <fullName>Ready_to_Invoice_LV</fullName>
    <columns>Name</columns>
    <columns>Case</columns>
    <columns>Account</columns>
    <columns>ServiceContract</columns>
    <columns>ServiceTerritory</columns>
    <columns>Status</columns>
    <columns>Customer_Purchase_Order_number__c</columns>
    <columns>X7_days_reminder_sent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Ready To Invoice</value>
    </filters>
    <label>Ready to Invoice</label>
</ListView>